/*
* Set up: 
* $ go install google.golang.org/protobuf/cmd/protoc-gen-go@v1.26
* $ go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.1
*
* Add `<GOPATH>/bin` to your $PATH:
* OR (!suboptimal since it overwrites $PATH by appending an additional 
* line as opposed to change it directly)
* $ echo "export PATH=$PATH:$(go env GOPATH)/bin" >> ~/.profile 
* $ source ~/.profile 
* OR temporarily
* $ export PATH="$PATH:$(go env GOPATH)/bin"
*/
syntax = "proto3";

option go_package = "github.com/tomquartz/kubedirect-bench/pkg/workload/proto";

package faas;

service Executor {
  rpc Execute (FaasRequest) returns (FaasReply) {}
}

message FaasRequest {
  string message = 1;           // Text message field (unused).
  uint32 runtimeMilliSec = 2; // Execution runtime [ms].
}

message FaasReply {
  string message = 1;             // Text message field (unused).
  uint32 durationMicroSec = 2;  // Execution latency [Âµs].
}
